logs/mobility/build.make.066.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void print(std::string)’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:701:1: error: expected ‘catch’ before ‘}’ token
 }
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:701:1: error: expected ‘(’ before ‘}’ token
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:701:1: error: expected type-specifier before ‘}’ token
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:701:1: error: expected ‘)’ before ‘}’ token
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:701:1: error: expected ‘{’ before ‘}’ token
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
